Added requirements.txt for CircleCI and specified Python version.

--- a/circle.yml
+++ b/circle.yml
@@ -5,3 +5,6 @@ deployment:
     owner: CS3398-Arctic
     commands:
       - ssh $SSH_USERNAME@64.137.249.182 "~/update_site.sh"
+machine:
+  python:
+    version: pypy-3.4.3
